src/objects/ADCVD_Case__c.object
<CustomObject>
    <description>The ADCVD Case object is the shell or &quot;manilla folder&quot; to tie all ADCVD Case activities together.</description>
    <fields>
        <fullName>ADCVD_Case_Number__c</fullName>
        <label>ADCVD Case Number Text Value</label>
        <length>28</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Type__c</fullName>
        <inlineHelpText>This should be in the following format:
A-###-### for AD 
C-###-### for CVD</inlineHelpText>
        <label>ADCVD Case Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD ME</fullName>
                </value>
                <value>
                    <fullName>AD NME</fullName>
                </value>
                <value>
                    <fullName>CVD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBP_Case_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>CBP Case Number</label>
        <length>28</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Concat_Text_Values__c</fullName>
        <label>Case Concat Text Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>Commodity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cement and Ceramics</fullName>
                </value>
                <value>
                    <fullName>Chemicals and Allied Industries</fullName>
                </value>
                <value>
                    <fullName>Foodstuffs</fullName>
                </value>
                <value>
                    <fullName>Machinery and Automotive</fullName>
                </value>
                <value>
                    <fullName>Minerals</fullName>
                </value>
                <value>
                    <fullName>Other Metals and Articles of Metal</fullName>
                </value>
                <value>
                    <fullName>Other Mfg.</fullName>
                </value>
                <value>
                    <fullName>Paper and Paperboard</fullName>
                </value>
                <value>
                    <fullName>Plastics and Rubber</fullName>
                </value>
                <value>
                    <fullName>Steel-Related</fullName>
                </value>
                <value>
                    <fullName>Textiles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <label>Country Text</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name__c</fullName>
        <label>Product Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ADCVD Case</label>
    <listViews>
        <fullName>ADCVD_Case_Open</fullName>
        <columns>NAME</columns>
        <columns>ADCVD_Case_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Product_Short_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Commodity__c</columns>
        <filterScope>Queue</filterScope>
        <label>ADCVD Case Open</label>
        <queue>ADCVD_Case_Open</queue>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ADCVD_Case_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Short_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Commodity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ADCVD Case</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADCVD Cases</pluralLabel>
    <recordTypes>
        <fullName>Filed</fullName>
        <active>true</active>
        <label>Filed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Self_Initiated</fullName>
        <active>true</active>
        <label>Self-Initiated</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CBP_Case_number_for_AD_and_CVD_Format</fullName>
        <active>true</active>
        <description>CBP Case Number must be formatted specifically this way.</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,IF(TEXT(ADCVD_Case_Type__c) = &quot;CVD&quot;, 
(NOT(OR(ISBLANK( CBP_Case_Number__c ),REGEX( CBP_Case_Number__c ,&quot;C-[0-9]{3}-[0-9]{3}&quot;)))), 
(NOT(OR(ISBLANK(CBP_Case_Number__c ),REGEX( CBP_Case_Number__c ,&quot;A-[0-9]{3}-[0-9]{3}&quot;)))) ))</errorConditionFormula>
        <errorDisplayField>CBP_Case_Number__c</errorDisplayField>
        <errorMessage>Format should be A-###-### or C-###-###</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Locked_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Permission.Edit_ADCVD_Locked_Records == false, 
NOT(ISNEW()), 
PRIORVALUE(Locked__c) == true 
)</errorConditionFormula>
        <errorMessage>This record is locked. Please contact your administrator about unlocking this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CaseType_must_match_format_of_CaseNumber</fullName>
        <active>true</active>
        <description>ADCVD Case Type should and Case Number must match</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,  
IF(
  OR(
    AND(
      OR(
         ISPICKVAL(ADCVD_Case_Type__c, &apos;AD ME&apos;),
         ISPICKVAL(ADCVD_Case_Type__c, &apos;AD NME&apos;)
         ),
         NOT(BEGINS(Name, &quot;A&quot;))
      )
      ,
     AND(
         ISPICKVAL(ADCVD_Case_Type__c, &apos;CVD&apos;),
         NOT(BEGINS(Name, &quot;C&quot;))
        )
      ),
     1, 0
    ) = 1
  )</errorConditionFormula>
        <errorDisplayField>ADCVD_Case_Type__c</errorDisplayField>
        <errorMessage>ADCVD Case Type field does not match with the ADCVD Case Number format. For AD cases the ADCVD Case Number format should be A-###-### and for CVD cases the format should be C-###-###.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_number_for_AD_and_CVD_Format</fullName>
        <active>true</active>
        <description>Case Number must be formatted specifically this way.</description>
        <errorConditionFormula>AND(
     $Setup.Master_Automation__c.ValidationRulesEnabled__c == true, 
     Locked__c == false, 
     NOT(REGEX(Name,&quot;C-[0-9]{3}-[0-9]{3}&quot;)), 
     NOT(REGEX(Name,&quot;A-[0-9]{3}-[0-9]{3}&quot;)) 
   )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Invalid ADCVD Case Number Format. For AD cases valid Case Number format should be  A-###-###. For CVD cases valid Case Number format should be C-###-###.</errorMessage>
    </validationRules>
</CustomObject>